--- a/GNBProducts/Base.lproj/Main.storyboard
+++ b/GNBProducts/Base.lproj/Main.storyboard
@@ -17,17 +17,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4kn-aT-TIZ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="r6g-Z6-EPd">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r6g-Z6-EPd" id="EJb-MK-egI">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4kn-aT-TIZ" secondAttribute="bottom" id="1U6-Mk-ggr"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4kn-aT-TIZ" secondAttribute="trailing" id="2kN-JX-cj2"/>
-                            <constraint firstItem="4kn-aT-TIZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dR7-js-sEx"/>
-                            <constraint firstItem="4kn-aT-TIZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nac-YZ-ugD"/>
+                            <constraint firstItem="4kn-aT-TIZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1SG-Yp-fQI"/>
+                            <constraint firstItem="4kn-aT-TIZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2es-yR-Xyy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4kn-aT-TIZ" secondAttribute="bottom" id="34a-10-41y"/>
+                            <constraint firstItem="4kn-aT-TIZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vw1-fK-dlD"/>
                         </constraints>
                     </view>
                     <connections>
